chore: task build - vérification npm:install + exécution de cette tâche avant le commit pour commitizen

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,6 +10,7 @@ tasks:
       - task: rollup-build
 
   rollup-build:
+    deps: [npm:install]
     sources:
       - index.md
       - js/**/*.js
@@ -23,6 +24,15 @@ tasks:
     method: timestamp
     cmds:
       - npx rollup --config
+
+  npm:install:
+    sources:
+      - package.json
+      - package-lock.json
+    generates:
+      - node_modules/.package-lock.json
+    cmds:
+      - npm install
 
   bump:
     generates:
